# tiny-gui-base

./: .gitmodules  CMakeLists.txt  README.md
cmake/: dear_imgui.cmake  glad.cmake  imgui_file_dialog.cmake  implot.cmake
gui_base/: CMakeLists.txt
gui_base/include/gui_base/: gui_base.hpp
gui_base/src/: gui_base.cpp
test/: CMakeLists.txt
test/src/: main.cpp
